// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when active 1`] = `
<th
  className="th"
  scope="col"
  style={
    Object {
      "left": undefined,
      "right": undefined,
    }
  }
>
  <div
    className="box xsDisplayInlineBlock"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      aria-disabled={false}
      className="hideOutline tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box xsDisplayFlex xsItemsCenter"
      >
        column name
        <div
          className="box marginStart2"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon defaultIcon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</th>
`;

exports[`renders correctly when inactive 1`] = `
<th
  className="th"
  scope="col"
  style={
    Object {
      "left": undefined,
      "right": undefined,
    }
  }
>
  <div
    className="box xsDisplayInlineBlock"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      aria-disabled={false}
      className="hideOutline tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box xsDisplayFlex xsItemsCenter"
      >
        column name
        <div
          className="box marginStart2"
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon subtleIcon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</th>
`;

exports[`sortable cell has end align 1`] = `
<th
  className="th"
  scope="col"
  style={
    Object {
      "left": undefined,
      "right": undefined,
    }
  }
>
  <div
    className="box xsDisplayInlineBlock"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      aria-disabled={false}
      className="hideOutline tapTransition rounding0 accessibilityOutline pointer"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="box justifyEnd xsDisplayFlex xsItemsCenter"
      >
        <div
          className="box marginEnd2"
          style={
            Object {
              "visibility": "visible",
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon defaultIcon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        column name
      </div>
    </div>
  </div>
</th>
`;
